--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--Home-->
     <section id="home">
         <h2>Learn How To Do A Lot On Your Own.</h2>
-        <p>This is a place where you can learn a lot of different skills in Malawi.
+        <p>This is a place where Lucky Banda will teach you a lot of different skills in Malawi.
            Here, you will learn about Education, Enterpreneurship, Computer Programming, Communication, 
             Agriculture, Healthy Living and Environmental Conservation. 
         </p>
