--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="cost">
-                    <a href="" style="text-decoration: none;">Watch</a>
+                    <a href="http://youtube.be/Dz33bmlWPnA" style="text-decoration: none;">Watch</a>
                 </div>
             </div>
 
